--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,13 @@
 		<nav>
     		<ul>
         		<li><a href="/cv">CV</a></li>
-        		<li><a href="/projects">Projects</a></li>
+			<li><div class="dropdown"><a href="/projects">Projects</a>
+				<div class="dropdown-content">
+				<ul> 
+					<li> <a href="/projects/idea-mix/Mixing.html"> idea-mix</a></li>
+				</ul>
+				</div>
+				</div></li>
     		</ul>
 		</nav>
 		<div class="container">
