--- a/css/main.css
+++ b/css/main.css
@@ -48,6 +48,14 @@ ul.posts li {
     display: inline-block;
 }
 
+/* Links inside the dropdown */
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
 /* Dropdown Content (Hidden by Default) */
 .dropdown-content {
     display: none;
