--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,9 +11,7 @@
         		<li><a href="/cv">CV</a></li>
 			<li><div class="dropdown"><a href="/projects">Projects</a>
 				<div class="dropdown-content">
-				<ul> 
-					<li> <a href="/projects/idea-mix/Mixing.html"> idea-mix</a></li>
-				</ul>
+				<a href="/projects/idea-mix/Mixing.html"> idea-mix</a>
 				</div>
 				</div></li>
     		</ul>
