--- a/css/main.css
+++ b/css/main.css
@@ -48,6 +48,12 @@ ul.posts li {
     display: inline-block;
 }
 
+.dropdown-btn {
+    padding: 16px;
+    border: none;
+    cursor: pointer;
+}
+
 /* Links inside the dropdown */
 .dropdown-content a {
     color: black;
@@ -72,4 +78,8 @@ ul.posts li {
 /* Show the dropdown menu on hover */
 .dropdown:hover .dropdown-content {
     display: block;
+}
+
+.dropdown:hover .dropdown-btn {
+    background-color: #f1f1f1;
 }
