--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
 		<nav>
     		<ul>
         		<li><a href="/cv">CV</a></li>
-			<li><div class="dropdown"><button class="dropdown-btn">Projects</button>
+			<li><div class="dropdown"><a >Projects</a>
 				<div class="dropdown-content">
 				<a href="/projects/idea-mix/Mixing.html"> idea-mix</a>
 				</div>
