--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,6 +12,7 @@
 			<li><div class="dropdown"><a >Projects</a>
 				<div class="dropdown-content">
 				<a href="/projects/idea-mix/Mixing.html"> idea-mix</a>
+				<a href="/projects/idea-mix/Maps.html"> maps</a>
 				</div>
 				</div></li>
     		</ul>
