--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
 	<body>
 		<nav>
     		<ul>
-        		<li><a href="/cv">CV</a></li>
+        		<li><a href="/cv/cv.pdf">CV</a></li>
 			<li><div class="dropdown"><a >Code</a>
 				<div class="dropdown-content">
 				<a href="/code/idea-mix/Mixing.html"> idea-mix</a>
