add pic robot assembly

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,6 +14,7 @@
 				<a href="/code/idea-mix/Mixing.html"> idea-mix</a>
 				<a href="/code/maps/Maps.html"> maps</a>
 				<a href="/code/error-propagation/Errors.html"> error-prop </a>
+				<a href="https://github.com/bkachroo/robot-pic/blob/master/Motor.X/Motor.asm"> robot-pic </a>
 				</div>
 				</div></li>
     		</ul>
